src/test/deca/syntax/invalid/Loop_incomplete.deca
// Description:
//    Une boucle for qui a une condition manquante
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

{
    int i = 5;
    for(i>)
}
